--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,43 @@
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+
 html h1, html h2, html h3, html h4, html h5, html h6, html a {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway',  sans-serif;
 }
 
 html p {
-  font-family: 'Crimson Text', serif;
+  font-family: 'Cinzel', serif;
 }
 
-.overlay {
-	background-color: #CFD1CF;
-	box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-	border-radius: 3px;
-	opacity: 0.8;
-  padding: 1rem;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-.background {
-  background-color:  #FFF;
-  box-shadow: 0 3px 3px rgba(0,0,0,0.2);
-  border-radius: 3px;
+a:active, a:visited {
+  color: inherit;
 }
+
 
 .headlines {
-  width: 100%;
-  height: 80vh;
-  background-image: url('./ryoji-iwata-a-qsFZimp1M-unsplash.jpg');
+  height: 100vh;
+  background-image: url('./sean-pollock-PhYq704ffdA-unsplash-resize.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
+}
+
+.carousel {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 .skewed {
@@ -54,3 +65,298 @@ html p {
 .card a:hover {
   text-decoration: none;
 }
+
+.imageContainer {
+  width: 80vw;
+  height: 80vh;
+}
+
+.topstoryImage {
+  width: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
+:root {
+  --color-primary: #6b7a8f;
+  --color-secondary: #101118;
+  --color-accent: #1d1f2f;
+  --color-focus: #6d64f7;
+  --base-duration: 600ms;
+  --base-ease: cubic-bezier(0.25, 0.46, 0.45, 0.84);
+}
+
+
+
+.slider {
+  --slide-size: 70vmin;
+  --slide-margin: 4vmin;
+  height: var(--slide-size);
+  margin: 0 auto;
+  position: relative;
+  width: var(--slide-size);
+}
+
+.slider__wrapper {
+  display: -webkit-box;
+  display: flex;
+  padding: 0;
+  margin: 0 calc(var(--slide-margin) * -1);
+  position: absolute;
+  -webkit-transition: -webkit-transform var(--base-duration) cubic-bezier(0.25, 1, 0.35, 1);
+  transition: -webkit-transform var(--base-duration) cubic-bezier(0.25, 1, 0.35, 1);
+  transition: transform var(--base-duration) cubic-bezier(0.25, 1, 0.35, 1);
+  transition: transform var(--base-duration) cubic-bezier(0.25, 1, 0.35, 1), -webkit-transform var(--base-duration) cubic-bezier(0.25, 1, 0.35, 1);
+}
+
+.slider__controls {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: calc(100% + 1rem);
+  width: 100%;
+}
+
+.slide {
+  -webkit-box-align: center;
+          align-items: center;
+  color: white;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-flex: 1;
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+  height: var(--slide-size);
+  -webkit-box-pack: center;
+          justify-content: center;
+  margin: 0 var(--slide-margin);
+  opacity: 0.25;
+  position: relative;
+  text-align: center;
+  -webkit-transition: opacity calc(var(--base-duration) / 2) var(--base-ease), -webkit-transform calc(var(--base-duration) / 2) var(--base-ease);
+  transition: opacity calc(var(--base-duration) / 2) var(--base-ease), -webkit-transform calc(var(--base-duration) / 2) var(--base-ease);
+  transition: opacity calc(var(--base-duration) / 2) var(--base-ease), transform calc(var(--base-duration) / 2) var(--base-ease);
+  transition: opacity calc(var(--base-duration) / 2) var(--base-ease), transform calc(var(--base-duration) / 2) var(--base-ease), -webkit-transform calc(var(--base-duration) / 2) var(--base-ease);
+  width: var(--slide-size);
+  z-index: 1;
+}
+
+.slide--previous:hover, .slide--next:hover {
+  opacity: 0.5;
+}
+
+.slide--previous {
+  cursor: w-resize;
+}
+
+.slide--previous:hover {
+  -webkit-transform: translateX(2%);
+          transform: translateX(2%);
+}
+
+.slide--next {
+  cursor: e-resize;
+}
+
+.slide--next:hover {
+  -webkit-transform: translateX(-2%);
+          transform: translateX(-2%);
+}
+
+.slide--current {
+  --x: 0;
+  --y: 0;
+  --d: 50;
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-user-select: auto;
+     -moz-user-select: auto;
+      -ms-user-select: auto;
+          user-select: auto;
+}
+
+@media (hover: hover) {
+  .slide--current:hover .slide__image-wrapper {
+    -webkit-transform: scale(1.025) translate(calc(var(--x) / var(--d) * 1px), calc(var(--y) / var(--d) * 1px));
+            transform: scale(1.025) translate(calc(var(--x) / var(--d) * 1px), calc(var(--y) / var(--d) * 1px));
+  }
+}
+
+.slide__image-wrapper {
+  background-color: var(--color-accent);
+  border-radius: 1%;
+  height: 100%;
+  left: 0%;
+  overflow: hidden;
+  position: absolute;
+  top: 0%;
+  -webkit-transition: -webkit-transform calc(var(--base-duration) / 4) var(--base-ease);
+  transition: -webkit-transform calc(var(--base-duration) / 4) var(--base-ease);
+  transition: transform calc(var(--base-duration) / 4) var(--base-ease);
+  transition: transform calc(var(--base-duration) / 4) var(--base-ease), -webkit-transform calc(var(--base-duration) / 4) var(--base-ease);
+  width: 100%;
+}
+
+.slide__image {
+  --d: 20;
+  height: 110%;
+  left: -5%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  top: -5%;
+  -webkit-transition: opacity var(--base-duration) var(--base-ease), -webkit-transform var(--base-duration) var(--base-ease);
+  transition: opacity var(--base-duration) var(--base-ease), -webkit-transform var(--base-duration) var(--base-ease);
+  transition: opacity var(--base-duration) var(--base-ease), transform var(--base-duration) var(--base-ease);
+  transition: opacity var(--base-duration) var(--base-ease), transform var(--base-duration) var(--base-ease), -webkit-transform var(--base-duration) var(--base-ease);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  width: 110%;
+}
+
+@media (hover: hover) {
+  .slide--current .slide__image {
+    -webkit-transform: translate(calc(var(--x) / var(--d) * 1px), calc(var(--y) / var(--d) * 1px));
+            transform: translate(calc(var(--x) / var(--d) * 1px), calc(var(--y) / var(--d) * 1px));
+  }
+}
+
+.slide__content {
+  --d: 60;
+  opacity: 0;
+  padding: 4vmin;
+  position: absolute;
+  bottom: 0;
+  width: 90%;
+  -webkit-transition: -webkit-transform var(--base-duration) var(--base-ease);
+  transition: -webkit-transform var(--base-duration) var(--base-ease);
+  transition: transform var(--base-duration) var(--base-ease);
+  transition: transform var(--base-duration) var(--base-ease), -webkit-transform var(--base-duration) var(--base-ease);
+  visibility: hidden;
+}
+.slide--current .slide__content {
+  -webkit-animation: fade-in calc(var(--base-duration) / 2) var(--base-ease) forwards;
+          animation: fade-in calc(var(--base-duration) / 2) var(--base-ease) forwards;
+  visibility: visible;
+}
+@media (hover: hover) {
+  .slide--current .slide__content {
+    -webkit-transform: translate(calc(var(--x) / var(--d) * -1px), calc(var(--y) / var(--d) * -1px));
+            transform: translate(calc(var(--x) / var(--d) * -1px), calc(var(--y) / var(--d) * -1px));
+  }
+}
+.slide__content > * + * {
+  margin-top: 2rem;
+}
+
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.slide__headline {
+  font-size: 3vmin;
+  font-weight: 600;
+  position: relative;
+  color: #FFF;
+}
+
+.slide__abstract {
+  font-size: 2vmin;
+  font-weight: 600;
+  position: relative;
+}
+
+
+
+
+.visuallyhidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.icon {
+  fill: var(--color-primary);
+  width: 100%;
+}
+
+.btn {
+  background-color: var(--color-primary);
+  border: none;
+  border-radius: 0.125rem;
+  color: white;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 1rem 2.5rem 1.125rem;
+}
+.btn:focus {
+  outline-color: var(--color-focus);
+  outline-offset: 2px;
+  outline-style: solid;
+  outline-width: 3px;
+}
+.btn:active {
+  -webkit-transform: translateY(1px);
+          transform: translateY(1px);
+}
+
+
+
+.slider__controls .btn {
+  --size: 3rem;
+  -webkit-box-align: center;
+          align-items: center;
+  background-color: transparent;
+  border: 3px solid transparent;
+  border-radius: 100%;
+  display: -webkit-box;
+  display: flex;
+  height: var(--size);
+  padding: 0;
+  width: var(--size);
+}
+.slider__controls .btn:focus {
+  border-color: var(--color-focus);
+  outline: none;
+}
+.slider__controls .btn--previous > * {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+
+
+
+
+
+
+
+
+
+
